# robotframework-javaui

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  PERFORMANCE_BENCHMARKING_COMPLETE.md  PHASE1_COMPLETION_REPORT.md  PHASE_4_DELIVERY_REPORT.md  PHASE_4_VALIDATION_REPORT.md  PHASE_5_SUMMARY.md  README.md  dry_run_results.json  javaswing.md  pyproject.toml  swing_library_menu_fix.patch  tasks.py  testreview.md
.github/workflows/: ci.yml  release.yml
agent/: build-swt-agent.sh  pom.xml
benches/: component_tree_benchmark.rs  element_benchmark.rs  locator_benchmark.rs  rpc_benchmark.rs  tree_depth_benchmark.rs
demo/: pom.xml
docs/: API_CHANGES_COMPONENT_TREE.md  BENCHMARKING_CHECKLIST.md  BENCHMARKING_SUMMARY.md  CODE_REVIEW_SUMMARY.md  COMPONENT_TREE_DOCUMENTATION_INDEX.md  COMPONENT_TREE_DOCUMENTATION_INDEX_OLD.md  COMPONENT_TREE_FILTERING_GUIDE.md  COMPONENT_TREE_QUICK_REFERENCE.md  COMPONENT_TREE_QUICK_START.md  DEPLOYMENT_CHECKLIST.md  DOCUMENTATION_COMPLETE_DELIVERY_REPORT.md  DOCUMENTATION_COVERAGE_REPORT.md  DOCUMENTATION_DELIVERY_SUMMARY.md  DOCUMENTATION_GENERATION_ANALYSIS.md  DOCUMENTATION_GENERATION_SUMMARY.md  DOCUMENTATION_SUMMARY.md  FEATURE_COMPARISON_CHART.md  FEATURE_COMPARISON_MATRIX.md  FEATURE_GAP_SUMMARY.md  FEATURE_PARITY_IMPLEMENTATION_PLAN.md  FINAL_DOCUMENTATION_DELIVERY.md  FINAL_TEST_RESULTS.md  FIXES_COMPLETED.md  FIXES_SUMMARY.md  HTML_VERIFICATION_REPORT.md  MEMORY_PHASE1_RESULTS.md  MIGRATION_GUIDE.md  MISSION_COMPLETE_FINAL_REPORT.md  MISSION_COMPLETE_SUMMARY.md  MISSION_COMPLETION_REPORT.md  MISSION_STATUS_REPORT.md  MULTI_TEST_HANG_CODE_REVIEW.md  MULTI_TEST_HANG_FIX_SUMMARY.md  MULTI_TEST_HANG_IMPLEMENTATION_PLAN.md  MULTI_TEST_HANG_PERFORMANCE_REPORT.md  OUTPUT_FORMATS_GUIDE.md  OUTPUT_FORMATS_QUICK_REFERENCE.md  OUTPUT_FORMAT_QUICK_REFERENCE.md  PERFORMANCE_BENCHMARKING_SUMMARY.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  (+48 more)
docs/adr/: ADR-001-DDD-ARCHITECTURE.md  ADR-001-unified-base-class-architecture.md  ADR-002-locator-syntax-strategy.md  ADR-003-keyword-naming-convention.md  ADR-004-technology-detection-and-mode-selection.md  ADR-005-error-handling-strategy.md  ADR-006-backwards-compatibility-approach.md  ADR-007-UNIFIED-KEYWORD-API.md  ADR-008-security-architecture.md  ADR-009-implementation-and-migration-plan.md  ADR-010-ASSERTIONENGINE-INTEGRATION.md  ADR-011-PYTHON-KEYWORD-LAYER.md  ADR-012-LOCATOR-ASSERTION-FLOW.md  ADR-013-SECURITY-ASSERTIONENGINE.md  ADR-014-IMPLEMENTATION-PLAN-ASSERTIONENGINE.md  README.md
docs/api-reference/: COMPONENT_TREE_API.md  COMPONENT_TREE_OPENAPI.yaml  python-api.md  robot-keywords.md
docs/architecture/: ASSERTION_ENGINE_INTEGRATION.md  CASCADED_SELECTOR_ARCHITECTURE_ANALYSIS.md  DDD_ARCHITECTURE_DESIGN.md  DOCUMENTATION_ARCHITECTURE_ANALYSIS.md  SWT_CLASSLOADER_SOLUTION.md  SWT_RCP_ASSERTION_ENGINE.md  UNIFIED_LIBRARY_ARCHITECTURE.md  ui-tree-system.md
docs/examples/: output_format_examples.md
docs/keywords/: Rcp.html  RcpLibrary.html  Swing.html  SwingLibrary.html  Swt.html  SwtLibrary.html
docs/performance/: BENCHMARKING_SUMMARY.md  COMPONENT_TREE_PERFORMANCE.md  INDEX.md  OPTIMIZATION_RECOMMENDATIONS.md  PROFILING_GUIDE.md  README.md  benchmark_raw_results.txt
docs/research/: CODEBASE_ANALYSIS.md  COMPLETE_DOCUMENTATION_ANALYSIS.md  DOCSTRING_ANALYSIS_SUMMARY.md  DOCSTRING_SPECIFICATION.md  DOCUMENTATION_COMPARISON_ANALYSIS.md  DOCUMENTATION_FINDINGS_SUMMARY.md  DOCUMENTATION_GAPS.md  HEADER_RENDERING_ISSUE_ANALYSIS.md  INTRODUCTION_COMPARISON_ANALYSIS.md  README.md  ROOT_CAUSE_ANALYSIS_BROWSER_VS_ROBOTFRAMEWORK_SWING.md  Update_Keywords.md  docstring_analysis.md
docs/specs/: CASCADED_SELECTOR_IMPLEMENTATION_PLAN.md  CASCADED_SELECTOR_SPECIFICATION.md  COMPONENT_TREE_INVESTIGATION_OVERVIEW.md  UI_COMPONENT_TREE_IMPLEMENTATION_PLAN.md
docs/test-plans/: CASCADED_DRY_RUN_REPORT.md  CASCADED_SELECTOR_PROJECT_SUMMARY.md  CASCADED_SELECTOR_TEST_PLAN.md  CASCADED_TEST_EXECUTION_REPORT.md  COMPREHENSIVE_TEST_VALIDATION_REPORT.md  DRY_RUN_RESULTS.md  PHASE_1-6_TEST_REPORT.md  README.md  REQUIREMENTS_VALIDATION_REPORT.md  TESTING_SUMMARY.md  TEST_EXECUTION_CHECKLIST.md  TEST_EXECUTION_REPORT_2026-01-22.md  TEST_REPORT_COMPONENT_TREE.md  TEST_VALIDATION_SUMMARY.md
docs/user-guide/: COMPONENT_TREE_GUIDE.md  COMPONENT_TREE_MIGRATION_GUIDE.md  COMPONENT_TREE_TROUBLESHOOTING.md  locator-reference.md  migration-guide.md  unified-library.md
examples/: README.md  advanced_locators.robot  basic_example.robot  component_tree_advanced.robot  component_tree_basic.robot  component_tree_filtering.robot  component_tree_formats.robot  output_formats.robot  python_usage.py  verify_bug_fixes.py
python/JavaGui/: __init__.py
python/swing_library/: __init__.py
schemas/: ui-tree.schema.json
scripts/: analyze_benchmarks.py  run_performance_benchmarks.py  run_tests.sh  validate_benchmarks.sh  verify_phase6_implementation.sh
scripts/ci/: cleanup-test-apps.ps1  cleanup-test-apps.sh  diagnostic-swing.ps1  diagnostic-swing.sh  diagnostic-swt.ps1  diagnostic-swt.sh
src/: error.rs  lib.rs
src/connection/: mod.rs
src/core/: backend.rs  config.rs  element.rs  element_cache.rs  mod.rs  tests.rs  type_mapping.rs
src/locator/: ast.rs  cache.rs  expression.rs  grammar.pest  matcher.rs  mod.rs  parser.rs  swt_matcher.rs  unified.rs  unified_tests.rs
src/model/: component.rs  element.rs  mod.rs  rcp.rs  tree.rs  widget.rs
src/protocol/: mod.rs
src/python/: base_library.rs  element.rs  exceptions.rs  mod.rs  rcp_library.rs  swing_library.rs  swing_library.rs.backup  swt_element.rs  swt_library.rs  tests.rs  unified_exceptions.rs
tests/: requirements.txt  test_empty_locator.py  verify_empty_locator_fix.robot
tests/experiments/: PERFORMANCE_BENCHMARK_GUIDE.md  QUICK_TEST_GUIDE.md  README.md  TEST_RESULTS_SUMMARY.txt  VALIDATION_REPORT.md  generate_performance_report.py  performance_benchmark.py  run_full_benchmark.sh  validation_no_hang.robot
tests/python/: __init__.py  conftest.py  pytest.ini  test_assertions.py  test_benchmark.py  test_component_tree.py  test_component_tree_benchmarks.py  test_utils.py  (+17 more)
(+148 files in other folders)
