[package]
name = "robotframework-swing"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "High-performance Robot Framework library for Java Swing, Eclipse SWT, and RCP automation"
authors = ["robotframework-swing contributors"]
repository = "https://github.com/robotframework/robotframework-swing"
keywords = ["robotframework", "swing", "swt", "rcp", "java", "automation", "testing"]
categories = ["development-tools::testing", "api-bindings"]

[lib]
name = "swing_library"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
quick-xml = { version = "0.31", features = ["serialize"] }
pest = "2.7"
pest_derive = "2.7"
lru = "0.12"
tokio = { version = "1.35", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
tracing = "0.1"
once_cell = "1.19"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Threading"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
pyo3-build-config = "0.20"

[dev-dependencies]
tempfile = "3.9"
criterion = "0.5"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[features]
default = []
jni-embed = []
# Toolkit-specific features
swing = []           # Enable Swing UI toolkit support (default behavior)
swt = []             # Enable Eclipse SWT widget toolkit support
rcp = ["swt"]        # Enable Eclipse RCP support (requires SWT)
all-toolkits = ["swing", "swt", "rcp"]  # Enable all UI toolkits
